プロパティの整理