@@ -18,7 +18,8 @@ java {
 }
 
 javafx {
-    version = '17.0.0.1'
+//    version = '17.0.0.1'
+    version = 13
     modules = [ 'javafx.controls' ]
 }
 
@@ -30,11 +31,4 @@ dependencies {
 
 test {
     useJUnitPlatform()
-
-    //Options for TestFX
-//    jvmArgs = [
-//            '--add-modules', 'org.testfx,org.testfx.junit5',
-//            '--add-reads', 'com.k7t3m.dynamictableview=org.testfx.junit5',
-//            '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
-//    ]
 }
